--- a/auditflow-frontend/src/app/app.component.html
+++ b/auditflow-frontend/src/app/app.component.html
@@ -52,6 +52,8 @@
     <div class="small-rectangle" onclick="showContactInfo()" style="cursor: pointer;">OUR SERVICES</div>
     <a href="login.html">
         <button class="login-button">LOG IN</button>
-    </a>    
+    </a>   
+    <button (click)="goToLogin()">Log In</button>
+ 
 </body>
 </html>
