--- a/auditflow-frontend/src/app/app.component.html
+++ b/auditflow-frontend/src/app/app.component.html
@@ -8,7 +8,7 @@
 <body>
     <div class="top-small-rectangle">LOG IN</div>
     <button class="login-button" onclick="alert('Log in functionality not implemented yet!')">LOG IN</button>
-    <img src="C:\Users\Admin\Downloads\logo_text2 (2).png" alt="Excellence Hub Logo" class="logo">
+    <img src="C:\Users\Admin\Desktop\app-web-auditflow\auditflow-frontend\src\assets\images\logo.png">
     <h1>
         <span class="line">Welcome To</span>
         <span class="line">Excellence Hub</span>
@@ -19,28 +19,28 @@
     </p>
 
     <p class="conseil-text">Conseil</p>
-    <img src="C:\Users\Admin\Downloads\consiel.svg" alt="Nouvelle Image" style="width: 45px; height: auto; margin: 80px;">
+    <img src="C:\Users\Admin\Desktop\app-web-auditflow\auditflow-frontend\src\assets\images\consiel.svg" alt="Nouvelle Image" style="width: 45px; height: auto; margin: 80px;">
     <div class="formation-text">Formation</div>
-    <img src="C:\Users\Admin\Downloads\forma.svg" alt="Image Formation" style="width: 55px; height: auto; margin: 60px; position: absolute; top: 600px; left: 3%; transform: translateX(-50%);">
+    <img src="C:\Users\Admin\Desktop\app-web-auditflow\auditflow-frontend\src\assets\images\forma.svg" alt="Image Formation" style="width: 55px; height: auto; margin: 60px; position: absolute; top: 600px; left: 3%; transform: translateX(-50%);">
     <div class="audit-text">Audit</div>
-    <img src="C:\Users\Admin\Downloads\audit.svg" alt="Image Audit" style="width: 45px; height: auto; margin: 60px; position: absolute; top: 510px; left: 3%; transform: translateX(-50%);">
+    <img src="C:\Users\Admin\Desktop\app-web-auditflow\auditflow-frontend\src\assets\images\audit.svg" alt="Image Audit" style="width: 45px; height: auto; margin: 60px; position: absolute; top: 510px; left: 3%; transform: translateX(-50%);">
     <div class="laboratoire-text">Laboratoire</div>
-    <img src="C:\Users\Admin\Downloads\front-view-science-elements-with-chemicals-composition.jpg" alt="Image Laboratoire" style="width: 80px; height: auto; margin: 60px; position: absolute; top: 420px; left: 22%; transform: translateX(-50%);">
+    <img src="C:\Users\Admin\Desktop\app-web-auditflow\auditflow-frontend\src\assets\images\labo.jpg" alt="Image Laboratoire" style="width: 80px; height: auto; margin: 60px; position: absolute; top: 420px; left: 22%; transform: translateX(-50%);">
     <div class="achats-sourcing-text">Achats & Sourcing</div>
-    <img src="C:\Users\Admin\Downloads\achat.jpg" alt="New Image" class="new-image" style="width: 80px; height: auto; margin: 60px; position: absolute; top: 510px; left: 22%; transform: translateX(-50%);">
+    <img src="C:\Users\Admin\Desktop\app-web-auditflow\auditflow-frontend\src\assets\images\achat.jpg" alt="New Image" class="new-image" style="width: 80px; height: auto; margin: 60px; position: absolute; top: 510px; left: 22%; transform: translateX(-50%);">
     <div class="transformation-digitale-text">
         Transformation<br>Digitale
     </div>
-    <img src="C:\Users\Admin\Downloads\tgrv,.jpg" alt="Transformation Digitale Image" class="transformation-image">
+    <img src="C:\Users\Admin\Desktop\app-web-auditflow\auditflow-frontend\src\assets\images\digital.jpg" alt="Transformation Digitale Image" class="transformation-image">
     
     <!-- Bottom images -->
-    <img src="C:\Users\Admin\Downloads\v2-dcdba2f8d13bfe1cc5e700c78975ff57_720w.jpg" alt="Image 1" class="bottom-image">
-    <img src="C:\Users\Admin\Downloads\mesa-madera-moderna-objetos_700248-31075.avif" alt="Image 2" class="bottom-image-second">
-    <img src="C:\Users\Admin\Downloads\entretien-professionnel (1).jpg" alt="Image 3" class="bottom-image-third">
-    <img src="C:\Users\Admin\Downloads\Image1.png" alt="Image 4" class="bottom-image-fourth">
-    <img src="C:\Users\Admin\Downloads\Image2.png" alt="Image 5" class="bottom-image-fifth">
-    <img src="C:\Users\Admin\Downloads\Image3.png" alt="Image 6" class="bottom-image-sixth">
-    <img src="C:\Users\Admin\Downloads\Image4.png" alt="Image 7" class="bottom-image-seventh">
+    <img src="C:\Users\Admin\Desktop\app-web-auditflow\auditflow-frontend\src\assets\images\im 3.jpg" alt="Image 1" class="bottom-image">
+    <img src="C:\Users\Admin\Desktop\app-web-auditflow\auditflow-frontend\src\assets\images\im 2.avif" alt="Image 2" class="bottom-image-second">
+    <img src="C:\Users\Admin\Desktop\app-web-auditflow\auditflow-frontend\src\assets\images\im 1.jpg" alt="Image 3" class="bottom-image-third">
+    <img src="C:\Users\Admin\Desktop\app-web-auditflow\auditflow-frontend\src\assets\images\tele.png" alt="Image 4" class="bottom-image-fourth">
+    <img src="C:\Users\Admin\Desktop\app-web-auditflow\auditflow-frontend\src\assets\images\sms.png" alt="Image 5" class="bottom-image-fifth">
+    <img src="C:\Users\Admin\Desktop\app-web-auditflow\auditflow-frontend\src\assets\images\sit.png" alt="Image 6" class="bottom-image-sixth">
+    <img src="C:\Users\Admin\Desktop\app-web-auditflow\auditflow-frontend\src\assets\images\loca.png" alt="Image 7" class="bottom-image-seventh">
 
     <div class="location">Rabat, MOROCCO</div>
     <div class="contact">+212 666 40 49 00</div>
