--- a/auditflow-frontend/src/app/dashboard-admin/dashboard-admin.component.html
+++ b/auditflow-frontend/src/app/dashboard-admin/dashboard-admin.component.html
@@ -1,1 +1,11 @@
-<p>dashboard-admin works!</p>
+<div class="dashboard-container">
+    <app-navbar></app-navbar>
+
+    <div class="main-content">
+        <app-left-navbar></app-left-navbar>
+
+        <div class="page-content">
+            <router-outlet></router-outlet>
+        </div>
+    </div>
+</div>
