--- a/auditflow-frontend/src/app/login/login.component.html
+++ b/auditflow-frontend/src/app/login/login.component.html
@@ -1,7 +1,20 @@
-<form (submit)="onLogin(); $event.preventDefault()">
-    <input type="text" [(ngModel)]="username" name="username" placeholder="Username" required>
-    <input type="password" [(ngModel)]="password" name="password" placeholder="Password" required>
-    <button type="submit">Log In</button>
-  </form>
-  <div class="error">{{ error }}</div>
-  
+<body style="margin:0; background: url('assets/okr.jpg') no-repeat center center fixed; background-size: cover; height: 100vh;">
+<div class="login-wrapper">
+    <div class="login-container">
+        <h2>Sign In</h2>
+        <form (submit)="onLogin(); $event.preventDefault()">
+            <div class="input-group">
+                <span class="icon">👤</span>
+                <input type="text" [(ngModel)]="username" name="username" placeholder="username" required />
+            </div>
+            <div class="input-group">
+                <span class="icon">🔑</span>
+                <input type="password" [(ngModel)]="password" name="password" placeholder="password" required />
+            </div>
+
+            <button type="submit">Login</button>
+        </form>
+        <div class="error" *ngIf="error">{{ error }}</div>
+        <button class="help-desk">🧾 Ticketing Help Desk</button>
+    </div>
+</div>
