--- a/auditflow-frontend/src/app/pipeline-details/pipeline-details.component.html
+++ b/auditflow-frontend/src/app/pipeline-details/pipeline-details.component.html
@@ -3,7 +3,8 @@
         [opportunityId]="opportunityId"
         [currentStep]="currentStep"
         [currentUserRole]="currentUserRole"
-        [opportunity]="opportunity">
+        [opportunity]="opportunity"
+        (unreadCountChange)="onChatUnreadCountChange($event)">
 </app-pipeline-chat>
 
 <div class="pipeline-details-container" *ngIf="!loading">
